Updated README about precise support

--- a/README
+++ b/README
@@ -1,6 +1,6 @@
 Qt Framework and Qt Creator IDE on Ubuntu Trusty (for now)
 
-This is puppet module to install Qt Framework and Qt Creator IDE on Ubuntu Trusty (for now)
+This is puppet module to install Qt Framework and Qt Creator IDE on Ubuntu Trusty/Precise (for now)
 
 License
 -------
